location updated in footer, title, etc

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Need a plumber? (123) 456-7890 – Let us connect you with the best local plumbers who service all areas in and around Fullerton.">
+  <meta name="description" content="Need a plumber? (123) 456-7890 – Let us connect you with the best local plumbers who service all areas in and around Jamestown.">
   <meta name="author" content="elemis">
-  <title>Plumber In Fullerton – Fast, Reliable, & Affordable Services</title>
+  <title>Plumbing Jamestown – Fast, Reliable, & Affordable Services</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -34,7 +34,7 @@
           </div>
           <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
             <div class="offcanvas-header d-lg-none">
-              <h3 class="text-white fs-30 mb-0">Plumber In<br/>Fullerton</h3>
+              <h3 class="text-white fs-30 mb-0">Plumbing<br/>Jamestown</h3>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
@@ -98,8 +98,8 @@
               <div class="container h-100">
                 <div class="row h-100">
                   <div class="col-md-10 offset-md-1 col-lg-7 offset-lg-4 col-xl-7 offset-xl-4 col-xxl-7 offset-xxl-5 text-center text-lg-start justify-content-center align-self-center align-items-start">
-                    <h1 class="display-1 fs-54 mb-4 text-white animate__animated animate__slideInDown animate__delay-2s">Plumber In Fullerton</h1>
-                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-3s">We connect you with qualified local plumbers in Fullerton and Orange County.</p>
+                    <h1 class="display-1 fs-54 mb-4 text-white animate__animated animate__slideInDown animate__delay-2s">Plumbing Jamestown</h1>
+                    <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-3s">We connect you with qualified local plumbers in Jamestown and the surrounding areas.</p>
                     <div class="animate__animated animate__slideInUp animate__delay-4s">
                       <a href="tel:1234567890" class="btn btn-lg btn-outline-white mb-2 rounded-pill scroll">Give us a Call</a>
                       <a href="#contact" class="btn btn-lg btn-outline-white mb-2 rounded-pill scroll">Send us an Email</a>
@@ -321,7 +321,7 @@
                 <div id="accordion-collapse-1-2" class="collapse" aria-labelledby="accordion-heading-1-2" data-bs-target="#accordion-1">
                   <div class="card-body">
                     <p>
-                      We service all of Fullerton and the surrounding areas including La Habra, Brea, Yorba Linda, Placentia, Anaheim, Orange, Santa Ana, Garden Grove, Westminster, and Buena Park.
+                      We service all of Jamestown and the surrounding areas including La Habra, Brea, Yorba Linda, Placentia, Anaheim, Orange, Santa Ana, Garden Grove, Westminster, and Buena Park.
                     </p>
                     <p>
                       We also service parts of Los Angeles County including La Mirada, Cerritos, Norwalk, Whittier, Hacienda Heights, and Rowland Heights.
@@ -567,7 +567,7 @@
               </div>
               <div class="align-self-start justify-content-start">
                 <h5 class="mb-1 text-inverse">Address</h5>
-                <address>Fullerton, California</address>
+                <address>Jamestown</address>
               </div>
             </div>
             <!--/div -->
@@ -579,7 +579,7 @@
       <!--/.row -->
       <hr class="my-7 mt-md-7" />
       <div class="d-md-flex align-items-center justify-content-between">
-        <p class="mb-2 mb-lg-0">© 2023 Plumber In Fullerton. All rights reserved.</p>
+        <p class="mb-2 mb-lg-0">© 2023 Plumbing Jamestown. All rights reserved.</p>
         <nav class="nav social social-white mb-0 text-md-end">
           <a href="#"><i class="fa-brands fa-google"></i></a>
           <a href="#"><i class="fa-brands fa-facebook"></i></a>
