--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,9 +4,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Plumber In Fullerton – Privacy Policy">
+    <meta name="description" content="Plumbing Jamestown – Privacy Policy">
     <meta name="author" content="elemis">
-    <title>Plumber In Fullerton – Privacy Policy</title>
+    <title>Plumbing Jamestown – Privacy Policy</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="./assets/css/plugins.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -26,7 +26,7 @@
           </div>
           <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
             <div class="offcanvas-header d-lg-none">
-              <h3 class="text-white fs-30 mb-0">Plumber In<br/>Fullerton</h3>
+              <h3 class="text-white fs-30 mb-0">Plumbing<br/>Jamestown</h3>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
@@ -242,7 +242,7 @@
               </div>
               <div class="align-self-start justify-content-start">
                 <h5 class="mb-1 text-inverse">Address</h5>
-                <address>Fullerton, California</address>
+                <address>Jamestown</address>
               </div>
             </div>
             <!--/div -->
@@ -254,7 +254,7 @@
       <!--/.row -->
       <hr class="my-7 mt-md-7" />
       <div class="d-md-flex align-items-center justify-content-between">
-        <p class="mb-2 mb-lg-0">© 2023 Plumber In Fullerton. All rights reserved.</p>
+        <p class="mb-2 mb-lg-0">© 2023 Plumbing Jamestown. All rights reserved.</p>
         <nav class="nav social social-white mb-0 text-md-end">
           <a href="#"><i class="fa-brands fa-google"></i></a>
           <a href="#"><i class="fa-brands fa-facebook"></i></a>
