place names updated

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <i class="fa-solid fa-wrench fa-3x h1 mb-4"></i>
             <h2 class="display-4 mb-3">Who Are We?</h2>
             <p class="lead fs-lg">
-              We're a team of specialists who work with only the most qualified and experienced technicians in Orange County to help you resolve your plumbing issues <span class="underline">effortlessly</span>.
+              We're a team of specialists who work with only the most qualified and experienced technicians in Chautauqua County to help you resolve your plumbing issues <span class="underline">effortlessly</span>.
             </p>
             <p class="mb-6">Our business is committed to delivering excellent quality service and value with every job. We pride ourselves handling the most complicated issues while adhering to the highest standards of customer satisfaction.</p>
             <div class="row gy-3 gx-xl-8">
@@ -321,11 +321,12 @@
                 <div id="accordion-collapse-1-2" class="collapse" aria-labelledby="accordion-heading-1-2" data-bs-target="#accordion-1">
                   <div class="card-body">
                     <p>
-                      We service all of Jamestown and the surrounding areas including La Habra, Brea, Yorba Linda, Placentia, Anaheim, Orange, Santa Ana, Garden Grove, Westminster, and Buena Park.
+                      We service all of Jamestown and the surrounding areas including Jamestown West, Lakewood, Elmhurst, Celoron, Ellicott, Falconer, Frewsberg, Panama, Sinclairville, and Randolph.
                     </p>
                     <p>
-                      We also service parts of Los Angeles County including La Mirada, Cerritos, Norwalk, Whittier, Hacienda Heights, and Rowland Heights.
-                    </p>                  </div>
+                      We also service most of Chautauqua County and Erie County. <a href="tel:1234567890">Give us a call</a> to see if we service your area!
+                    </p>                  
+                  </div>
                   <!-- /.card-body -->
                 </div>
                 <!-- /.collapse -->
