--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
             <div class="shape bg-dot primary rellax w-16 h-20 d-sm-none d-md-block" data-rellax-speed="1" style="top: 3rem; left: 5.5rem"></div>
             <div class="overlap-grid overlap-grid-2">
               <div class="item">
-                <figure class="rounded shadow"><img src="./assets/img/photos/IMG_4049-square.JPG" srcset="./assets/img/photos/about2@2x.jpg 2x" alt=""></figure>
+                <figure class="rounded shadow"><img src="./assets/img/photos/IMG_4049square.JPG" alt=""></figure>
               </div>
               <div class="item">
-                <figure class="rounded shadow"><img src="./assets/img/photos/IMG_4036.JPG" srcset="./assets/img/photos/about3@2x.jpg 2x" alt=""></figure>
+                <figure class="rounded shadow"><img src="./assets/img/photos/IMG_4036.JPG" alt=""></figure>
               </div>
             </div>
           </div>
