--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <!-- /column -->
                     <div class="col-md-6">
                       <div class="form-floating mb-4">
-                        <input id="frm_email" type="email" name="email" class="form-control border-0" placeholder="jane.doe@example.com" required="required" data-error="Valid email is required.">
+                        <input id="frm_email" type="email" name="email" class="form-control border-0" placeholder="johndoe@example.com" required="required" data-error="Valid email is required.">
                         <label for="frm_email">Email *</label>
                         <div class="valid-feedback">
                           Looks good!
