--- a/index.html
+++ b/index.html
@@ -471,47 +471,38 @@
               </div>
               <!-- /column -->
               <div class="col-lg-6">
-                <form class="contact-form needs-validation" method="post" action="./assets/php/contact.php" novalidate>
+                <form action="https://formsubmit.co/help@plumbingjamestown.com" class="contact-form needs-validation" method="POST">
                   <div class="messages"></div>
                   <div class="row gx-4">
                     <div class="col-md-6">
                       <div class="form-floating mb-4">
-                        <input id="frm_name" type="text" name="name" class="form-control border-0" placeholder="Jane" required="required" data-error="First name is required.">
-                        <label for="frm_name">Name *</label>
-                        <div class="invalid-feedback">
-                          Please enter your name.
-                        </div>
+                        <input type="text" name="name" class="form-control border-0" placeholder="John" required>
+                        <label for="">Name *</label>
                       </div>
                     </div>
                     <!-- /column -->
                     <div class="col-md-6">
                       <div class="form-floating mb-4">
-                        <input id="frm_email" type="email" name="email" class="form-control border-0" placeholder="johndoe@example.com" required="required" data-error="Valid email is required.">
-                        <label for="frm_email">Email *</label>
-                        <div class="valid-feedback">
-                          Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                          Please provide a valid email address.
-                        </div>
+                        <input type="email" name="email" class="form-control border-0" placeholder="johndoe@example.com" required>
+                        <label for="">Email *</label>
                       </div>
                     </div>
                     <!-- /column -->
                     <div class="col-12">
                       <div class="form-floating mb-4">
-                        <textarea id="frm_message" name="message" class="form-control border-0" placeholder="Your message" style="height: 150px" required></textarea>
-                        <label for="frm_message">Message *</label>
-                        <div class="valid-feedback">
-                          Looks good!
-                        </div>
-                        <div class="invalid-feedback">
-                          Please enter your messsage.
-                        </div>
+                        <textarea name="message" id="" class="form-control border-0" placeholder="Write your message here" style="height: 150px" required></textarea>
+                        <input type="hidden" name="_subject" value="Ticket from plumbingjamestown.com">
+                        <input type="hidden" name="_next" value="https://www.google.com">
+                        <input type="text" name="_honey" style="display:none">
+                        <input type="hidden" name="_captcha" value="false">
+                        <label for="">Message *</label>
                       </div>
                     </div>
                     <!-- /column -->
                     <div class="col-12">
-                      <input type="submit" class="btn btn-outline-primary rounded-pill btn-send mb-3" value="Send message">
+                      <button type="submit" class="btn btn-outline-primary rounded-pill btn-send mb-3" id="button--email">
+                        Send Message
+                      </button>
                     </div>
                     <!-- /column -->
                   </div>
