redirect link updated

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                       <div class="form-floating mb-4">
                         <textarea name="message" id="" class="form-control border-0" placeholder="Write your message here" style="height: 150px" required></textarea>
                         <input type="hidden" name="_subject" value="Ticket from plumbingjamestown.com">
-                        <input type="hidden" name="_next" value="https://www.google.com">
+                        <input type="hidden" name="_next" value="https://www.plumbingjamestown.com">
                         <input type="text" name="_honey" style="display:none">
                         <input type="hidden" name="_captcha" value="false">
                         <label for="">Message *</label>
