images optimized for mobile

--- a/index.html
+++ b/index.html
@@ -14,9 +14,25 @@
 </head>
 
 <style type="text/css">
+  .hero-img {
+    background-image: url("./assets/img/photos/plumbing-hero-blueprint-320w.JPG");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   .process-hover:hover {
     color:#fff;
     background-color: #3f78e0;
+  }
+  @media only screen and (min-width: 425px) {
+    .hero-img {
+      background-image: url("./assets/img/photos/plumbing-hero-blueprint-640w.JPG");
+    }
+  }
+  @media only screen and (min-width: 768px) {
+    .hero-img {
+      background-image: url("./assets/img/photos/plumbing-hero-blueprint-1280w.JPG");
+    }
   }
 </style>
 
@@ -94,7 +110,7 @@
       <div class="swiper-container swiper-hero dots-over" data-margin="0" data-autoplay="true" data-autoplaytime="5000" data-nav="true" data-dots="true" data-items="1">
         <div class="swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide h-100 bg-overlay bg-overlay-600 bg-dark" style="background-image:url(./assets/img/photos/plumbing-hero-blueprint.JPG);">
+            <div class="swiper-slide h-100 bg-overlay bg-overlay-600 bg-dark hero-img">
               <div class="container h-100">
                 <div class="row h-100">
                   <div class="col-md-10 offset-md-1 col-lg-7 offset-lg-4 col-xl-7 offset-xl-4 col-xxl-7 offset-xxl-5 text-center text-lg-start justify-content-center align-self-center align-items-start">
@@ -153,10 +169,20 @@
             <div class="shape bg-dot primary rellax w-16 h-20 d-sm-none d-md-block" data-rellax-speed="1" style="top: 3rem; left: 5.5rem"></div>
             <div class="overlap-grid overlap-grid-2">
               <div class="item">
-                <figure class="rounded shadow"><img src="./assets/img/photos/closeup-pipe-cutting.JPG" alt=""></figure>
+                <figure class="rounded shadow">
+                  <img 
+                    srcset="./assets/img/photos/closeup-pipe-cutting-320w.JPG 768w, ./assets/img/photos/closeup-pipe-cutting-600w.JPG"
+                    src="./assets/img/photos/closeup-pipe-cutting-600w.JPG" 
+                    alt="">
+                </figure>
               </div>
               <div class="item">
-                <figure class="rounded shadow"><img src="./assets/img/photos/sink-and-shower.JPG" alt=""></figure>
+                <figure class="rounded shadow">
+                  <img 
+                    srcset="./assets/img/photos/sink-and-shower-320w.JPG 768w, ./assets/img/photos/sink-and-shower-800w.JPG"
+                    src="./assets/img/photos/sink-and-shower-800w.JPG" 
+                    alt="" />
+                  </figure>
               </div>
             </div>
           </div>
@@ -391,19 +417,47 @@
                         <p>One of the easiest ways to save money is by simply replacing old fixtures with new ones. Newer fixtures like toilets and showerheads are often equipped with a “low-water” or “eco-friendly” option and newer faucets tend to have higher quality seals to prevent leaks. Not to mention, a dripping faucet can waste up to 180 gallons of water per month!</p>
                         <div class="row g-6 mt-3 mb-10">
                           <div class="col-md-6">
-                            <figure class="hover-scale rounded cursor-dark"><a href="./assets/img/photos/plumber-tools-bathroom.JPG" data-glightbox data-gallery="post"> <img src="./assets/img/photos/plumber-tools-bathroom.JPG" alt="" /></a></figure>
+                            <figure class="hover-scale rounded cursor-dark">
+                              <a href="./assets/img/photos/plumber-tools-bathroom-800w.JPG" data-glightbox data-gallery="post"> 
+                                <img 
+                                srcset="./assets/img/photos/plumber-tools-bathroom-320w.JPG 768w, ./assets/img/photos/plumber-tools-bathroom-800w.JPG"
+                                src="./assets/img/photos/plumber-tools-bathroom-800w.JPG" 
+                                alt="" />
+                              </a>
+                            </figure>
                           </div>
                           <!--/column -->
                           <div class="col-md-6">
-                            <figure class="hover-scale rounded cursor-dark"><a href="./assets/img/photos/tubes-meters.JPG" data-glightbox data-gallery="post"> <img src="./assets/img/photos/tubes-meters.JPG" alt="" /></a></figure>
+                            <figure class="hover-scale rounded cursor-dark">
+                              <a href="./assets/img/photos/tubes-meters-800w.JPG" data-glightbox data-gallery="post"> 
+                                <img 
+                                srcset="./assets/img/photos/tubes-meters-320w.JPG 768w, ./assets/img/photos/tubes-meters-800w.JPG"
+                                src="./assets/img/photos/tubes-meters-800w.JPG" 
+                                alt="" />
+                              </a>
+                            </figure>
                           </div>
                           <!--/column -->
                           <div class="col-md-6">
-                            <figure class="hover-scale rounded cursor-dark"><a href="./assets/img/photos/plumbing-tools-background.JPG" data-glightbox data-gallery="post"> <img src="./assets/img/photos/plumbing-tools-background.JPG" alt="" /></a></figure>
+                            <figure class="hover-scale rounded cursor-dark">
+                              <a href="./assets/img/photos/plumbing-tools-background-800w.JPG" data-glightbox data-gallery="post"> 
+                                <img 
+                                srcset="./assets/img/photos/plumbing-tools-background-320w.JPG 768w, ./assets/img/photos/plumbing-tools-background-800w.JPG"
+                                src="./assets/img/photos/plumbing-tools-background-800w.JPG" 
+                                alt="" />
+                              </a>
+                            </figure>
                           </div>
                           <!--/column -->
                           <div class="col-md-6">
-                            <figure class="hover-scale rounded cursor-dark"><a href="./assets/img/photos/standard-heater.JPG" data-glightbox data-gallery="post"> <img src="./assets/img/photos/standard-heater.JPG" alt="" /></a></figure>
+                            <figure class="hover-scale rounded cursor-dark">
+                              <a href="./assets/img/photos/standard-heater-800w.JPG" data-glightbox data-gallery="post"> 
+                                <img 
+                                srcset="./assets/img/photos/standard-heater-320w.JPG 768w, ./assets/img/photos/standard-heater-800w.JPG"
+                                src="./assets/img/photos/standard-heater-800w.JPG" 
+                                alt="" />
+                              </a>
+                            </figure>
                           </div>
                           <!--/column -->
                         </div>
@@ -418,19 +472,47 @@
                         <p>Does your toilet sound like it's been running longer than usual? Let's take a look at some reasons why your toilet isn't flushing properly. First, remove the lid from the tank of the toilet. Take a look inside. There are three main parts: the fill valve, the flapper, and the float.</p>
                         <div class="row g-6 mt-3 mb-10">
                           <div class="col-md-6">
-                            <figure class="hover-scale rounded cursor-dark"><a href="./assets/img/photos/pipes-and-cutter.JPG" data-glightbox data-gallery="post"> <img src="./assets/img/photos/pipes-and-cutter.JPG" alt="" /></a></figure>
+                            <figure class="hover-scale rounded cursor-dark">
+                              <a href="./assets/img/photos/pipes-and-cutter-800w.JPG" data-glightbox data-gallery="post"> 
+                                <img 
+                                srcset="./assets/img/photos/pipes-and-cutter-320w.JPG 768w, ./assets/img/photos/pipes-and-cutter-800w.JPG"
+                                src="./assets/img/photos/pipes-and-cutter-800w.JPG" 
+                                alt="" />
+                              </a>
+                            </figure>
                           </div>
                           <!--/column -->
                           <div class="col-md-6">
-                            <figure class="hover-scale rounded cursor-dark"><a href="./assets/img/photos/plumbing-design-pipe.JPG" data-glightbox data-gallery="post"> <img src="./assets/img/photos/plumbing-design-pipe.JPG" alt="" /></a></figure>
+                            <figure class="hover-scale rounded cursor-dark">
+                              <a href="./assets/img/photos/plumbing-design-pipe-800w.JPG" data-glightbox data-gallery="post"> 
+                                <img 
+                                srcset="./assets/img/photos/plumbing-design-pipe-320w.JPG 768w, ./assets/img/photos/plumbing-design-pipe-800w.JPG"
+                                src="./assets/img/photos/plumbing-design-pipe-800w.JPG" 
+                                alt="" />
+                              </a>
+                            </figure>
                           </div>
                           <!--/column -->
                           <div class="col-md-6">
-                            <figure class="hover-scale rounded cursor-dark"><a href="./assets/img/photos/valves-pipes.JPG" data-glightbox data-gallery="post"> <img src="./assets/img/photos/valves-pipes.JPG" alt="" /></a></figure>
+                            <figure class="hover-scale rounded cursor-dark">
+                              <a href="./assets/img/photos/valves-pipes-800w.JPG" data-glightbox data-gallery="post"> 
+                                <img 
+                                srcset="./assets/img/photos/valves-pipes-320w.JPG 768w, ./assets/img/photos/valves-pipes-800w.JPG"
+                                src="./assets/img/photos/valves-pipes-800w.JPG" 
+                                alt="" />
+                              </a>
+                            </figure>
                           </div>
                           <!--/column -->
                           <div class="col-md-6">
-                            <figure class="hover-scale rounded cursor-dark"><a href="./assets/img/photos/toolboxes-in-bathroom.JPG" data-glightbox data-gallery="post"> <img src="./assets/img/photos/toolboxes-in-bathroom.JPG" alt="" /></a></figure>
+                            <figure class="hover-scale rounded cursor-dark">
+                              <a href="./assets/img/photos/toolboxes-in-bathroom-800w.JPG" data-glightbox data-gallery="post"> 
+                                <img 
+                                srcset="./assets/img/photos/toolboxes-in-bathroom-320w.JPG 768w, ./assets/img/photos/toolboxes-in-bathroom-800w.JPG"
+                                src="./assets/img/photos/toolboxes-in-bathroom-800w.JPG" 
+                                alt="" />
+                              </a>
+                            </figure>
                           </div>
                           <!--/column -->
                         </div>
