mt-12 in home title

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="swiper-slide h-100 bg-overlay bg-overlay-600 bg-dark hero-img">
               <div class="container h-100">
                 <div class="row h-100">
-                  <div class="col-md-10 offset-md-1 col-lg-7 offset-lg-4 col-xl-7 offset-xl-4 col-xxl-7 offset-xxl-5 text-center text-lg-start justify-content-center align-self-center align-items-start">
+                  <div class="col-md-10 offset-md-1 col-lg-7 offset-lg-4 col-xl-7 offset-xl-4 col-xxl-7 offset-xxl-5 text-center text-lg-start justify-content-center align-self-center align-items-start mt-12">
                     <h1 class="display-1 fs-54 mb-4 text-white animate__animated animate__slideInDown animate__delay-2s">Plumbing Jamestown</h1>
                     <p class="lead fs-23 lh-sm mb-7 text-white animate__animated animate__slideInRight animate__delay-3s">We connect you with qualified local plumbers in Jamestown and the surrounding areas.</p>
                     <div class="animate__animated animate__slideInUp animate__delay-4s">
