css h3 & input data

--- a/index.html
+++ b/index.html
@@ -232,19 +232,19 @@
         <hr class="process__horizontal-line">
         <div class="row">
           <div class="process__column"> <span class="process__circle">01</span>
-            <h4 class="process__subtitle">Contact</h4>
+            <h3 class="process__subtitle">Contact</h3>
             <p class="process__text">Our team asks a few questions about the issue at hand to make sure we send the best specialists.</p>
           </div>
           <div class="process__column"> <span class="process__circle">02</span>
-            <h4 class="process__subtitle">Appointment</h4>
+            <h3 class="process__subtitle">Appointment</h3>
             <p class="process__text">We schedule an appointment where certified, licensed plumbers arrive to further inspect the issue.</p>
           </div>
           <div class="process__column"> <span class="process__circle">03</span>
-            <h4 class="process__subtitle">Solution</h4>
+            <h3 class="process__subtitle">Solution</h3>
             <p class="process__text">Experienced technicians get to work using top of the line tools and equipment to get the job done.</p>
           </div>
           <div class="process__column"> <span class="process__circle">04</span>
-            <h4 class="process__subtitle">Payment</h4>
+            <h3 class="process__subtitle">Payment</h3>
             <p class="process__text">Processing payment is easy with cash, card, or financing options. Don't forget to <a href="#contact" class="scroll">leave us a review!</a></p>
           </div>
         </div>
@@ -281,7 +281,7 @@
                     We service all of Jamestown and the surrounding areas including Jamestown West, Lakewood, Elmhurst, Celoron, Ellicott, Falconer, Frewsberg, Panama, Sinclairville, and Randolph.
                   </p>
                   <p>
-                    We also service Chautauqua County and Erie County. <a href="tel:1234567890">Give us a call</a> to see if we service your area!
+                    We also service Chautauqua County and Erie County. <a href="tel:+17167204364">Give us a call</a> to see if we service your area!
                   </p> 
                 </div>
               </div>
@@ -413,15 +413,15 @@
             <div class="contact__column">
               <form action="https://formsubmit.co/help@plumbingjamestown.com" method="POST">
                 <div class="contact__form-field form-float">
-                  <input name="name" required="required">
+                  <input type="text" id="name" name="name" required="required" aria-label="name">
                   <label for="name">Name *</label>
                 </div>
                 <div class="contact__form-field form-float">
-                  <input name="email" required="required">
+                  <input type="text" id="email" name="email" required="required" aria-label="email">
                   <label for="email">Email *</label>
                 </div>
                 <div class="contact__form-field form-float">
-                  <textarea name="message" required="required"></textarea>
+                  <textarea type="text" id="message" name="message" required="required" aria-label="message"></textarea>
                   <label for="message">Message *</label>
                   <input type="hidden" name="_subject" value="Ticket from plumbingjamestown.com">
                   <input type="hidden" name="_next" value="https://www.plumbingjamestown.com">
