--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="navbar__nav-container">
           <div class="navbar__nav">
             <div class="offcanvas-header">
-              <h3 class="offcanvas-title">Plumbing<br>Jamestown</h3>
+              <h3 class="offcanvas-title">All Plumbing<br>NYC</h3>
               <button class="offcanvas-close">✕</button>
             </div>
             <ul class="navbar__nav-links">
@@ -42,14 +42,14 @@
               <li class="navbar__nav-item"><a href="./index.html#contact">Contact</a></li>
             </ul>
             <div class="offcanvas-footer">
-              <a href="tel:+17167204364">Give us a Call<br>(716) 720-4364</a>
+              <a href="tel:+13474848860">Give us a Call<br>(347) 484-8860</a>
             </div>
           </div>
         </div>
         <div class="navbar__hamburger-container">
           <ul class="navbar__hamburger-links">
             <li class="navbar__phone">
-              <a class="button" href="tel:+17167204364">(716) 720-4364</a>
+              <a class="button" href="tel:+13474848860">(347) 484-8860</a>
             </li>
             <li class="navbar__hamburger">
               <img src="./assets/img/icons/hamburger-icon-24w.png" alt="">
@@ -63,10 +63,10 @@
       <div class="home__background-img">
         <div class="home__overlay">
           <div class="home__container container">
-            <h1 class="home__title slide-down">Plumbing Jamestown</h1>
+            <h1 class="home__title slide-down">All Plumbing NYC</h1>
             <p class="home__subheading slide-left">We connect you with qualified local plumbers in Jamestown and the surrounding areas.</p>
             <div class="home__button slide-up">
-              <a class="button" href="tel:+17167204364">Give us a Call</a>
+              <a class="button" href="tel:+13474848860">Give us a Call</a>
               <a class="button" href="#contact">Send an Email</a>
             </div>
           </div>
@@ -277,10 +277,10 @@
                 <label class="faq__accordion-label" for="accordion-2"><span>Which areas do you service?</span></label>
                 <div class="faq__accordion-text">
                   <p>
-                    We service all of Jamestown and the surrounding areas including Jamestown West, Lakewood, Elmhurst, Celoron, Ellicott, Falconer, Frewsberg, Panama, Sinclairville, and Randolph.
+                    We service all of NYC and the surrounding areas including East New Jersey, Lakewood, Elmhurst, Celoron, Ellicott, Falconer, Frewsberg, Panama, Sinclairville, and Randolph.
                   </p>
                   <p>
-                    We also service Chautauqua County and Erie County. <a href="tel:+17167204364">Give us a call</a> to see if we service your area!
+                    We also service Chautauqua County and Erie County. <a href="tel:+13474848860">Give us a call</a> to see if we service your area!
                   </p> 
                 </div>
               </div>
@@ -396,7 +396,7 @@
           <p>First, let's look at the fill valve. The fill valve is the plastic center cylinder that moves vertically up and down along the shaft. The fill valve often gets stuck due to mineral build up. Simply turn off the water to the toilet and flush to drain the tank. Then, get a rag and bathroom cleaner to clean the shaft, moving the cylinder up and down to expose any hidden mineral sediment. Once the cylinder can move freely, turn on the water to toilet and let the tank refill with water.</p>
           <p>Next is the flapper. The flapper is the rubber stopper located at the bottom of the tank. It should be connected to the toilet handle by a chain. Simply wiggle it around until it seals. If it's still leaking water even though it looks sealed, it might need replacing.</p>
           <p>And finally, the float. The float is the black ball which is connected to a metal rod. Not all toilets have this. Sometimes it just falls off the hinges. Just make sure everything is connected properly so that the float can freely move up and down.</p>
-          <p>Are you still having issues? <a href="tel:+17167204364">Call the professionals</a> to help out today!</p>
+          <p>Are you still having issues? <a href="tel:+13474848860">Call the professionals</a> to help out today!</p>
         </div>
       </div>
     </section>
@@ -448,7 +448,7 @@
         </div>
         <div class="footer__flex-child footer__contact-information">
           <h4>Phone</h4>
-          <p><a href="tel:+17167204364">(716) 720-4364</a></p>
+          <p><a href="tel:+13474848860">(347) 484-8860</a></p>
         </div>
       </div>
       <div class="footer__flex">
@@ -457,12 +457,12 @@
         </div>
         <div class="footer__flex-child footer__contact-information">
           <h4>Address</h4>
-          <address>2329 Foote Ave Suite 1<br>Jamestown, NY 14701</address>
+          <address>34st<br>New York, NY 10007</address>
         </div>
       </div>
       <hr class="footer__horizontal-line">
       <div class="footer__copyright">
-        <p>© 2023 Plumbing Jamestown. All rights reserved.</p>
+        <p>© 2023 All Plumbing NYC. All rights reserved.</p>
       </div>
     </div>
   </footer>
