--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Plumber In Fullerton – 404 Page Not Found">
   <meta name="author" content="elemis">
-  <title>Plumber In Fullerton – 404 Page Not Found</title>
+  <title>All Plumbing NYC – 404 Page Not Found</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="./assets/js/perf.js"></script>
@@ -30,7 +30,7 @@
         <div class="navbar__nav-container">
           <div class="navbar__nav">
             <div class="offcanvas-header">
-              <h3 class="offcanvas-title">Plumbing<br>Jamestown</h3>
+              <h3 class="offcanvas-title">All Plumbing<br>NYC</h3>
               <button class="offcanvas-close">✕</button>
             </div>
             <ul class="navbar__nav-links">
@@ -42,14 +42,14 @@
               <li class="navbar__nav-item"><a href="./index.html#contact">Contact</a></li>
             </ul>
             <div class="offcanvas-footer">
-              <a href="tel:+17167204364">Give us a Call<br>(716) 720-4364</a>
+              <a href="tel:+13474848860">Give us a Call<br>(347) 484-8860</a>
             </div>
           </div>
         </div>
         <div class="navbar__hamburger-container">
           <ul class="navbar__hamburger-links">
             <li class="navbar__phone">
-              <a class="button" href="tel:+17167204364">(716) 720-4364</a>
+              <a class="button" href="tel:+13474848860">(347) 484-8860</a>
             </li>
             <li class="navbar__hamburger">
               <img src="./assets/img/icons/hamburger-icon-24w.png" alt="">
@@ -89,7 +89,7 @@
         </div>
         <div class="footer__flex-child footer__contact-information">
           <h4>Phone</h4>
-          <p><a href="tel:+17167204364">(716) 720-4364</a></p>
+          <p><a href="tel:+13474848860">(347) 484-8860</a></p>
         </div>
       </div>
       <div class="footer__flex">
@@ -103,7 +103,7 @@
       </div>
       <hr class="footer__horizontal-line">
       <div class="footer__copyright">
-        <p>© 2023 Plumbing Jamestown. All rights reserved.</p>
+        <p>© 2023 All Plumbing NYC. All rights reserved.</p>
       </div>
     </div>
   </footer>
