--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Need a plumber? (716) 720-4364 – Let us connect you with the best local plumbers who service all areas in and around Jamestown.">
-  <title>Plumbing Jamestown – Fast, Reliable, & Affordable Services</title>
+  <meta name="description" content="Need a plumber? (347) 484-8860 – Let us connect you with the best local plumbers who service all areas in and around Jamestown.">
+  <title>All Plumbing NYC – Fast, Reliable, & Affordable Services</title>
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
   <link fetchpriority="high" rel="preload" href="./assets/img/photos/plumbing-hero-blueprint-640w.JPG" as="image">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -422,8 +422,8 @@
                 <div class="contact__form-field form-float">
                   <textarea type="text" id="message" name="message" required="required" aria-label="message"></textarea>
                   <label for="message">Message *</label>
-                  <input type="hidden" name="_subject" value="Ticket from plumbingjamestown.com">
-                  <input type="hidden" name="_next" value="https://www.plumbingjamestown.com">
+                  <input type="hidden" name="_subject" value="Ticket from allplumbingnyc.com">
+                  <input type="hidden" name="_next" value="https://www.allplumbingnyc.com">
                   <input type="text" name="_honey" style="display:none">
                   <input type="hidden" name="_captcha" value="false">
                 </div>
