--- a/terms.html
+++ b/terms.html
@@ -42,14 +42,14 @@
               <li class="navbar__nav-item"><a href="./index.html#contact">Contact</a></li>
             </ul>
             <div class="offcanvas-footer">
-              <a href="tel:+17167204364">Give us a Call<br>(716) 720-4364</a>
+              <a href="tel:+13474848860">Give us a Call<br>(347) 484-8860</a>
             </div>
           </div>
         </div>
         <div class="navbar__hamburger-container">
           <ul class="navbar__hamburger-links">
             <li class="navbar__phone">
-              <a class="button" href="tel:+17167204364">(716) 720-4364</a>
+              <a class="button" href="tel:+13474848860">(347) 484-8860</a>
             </li>
             <li class="navbar__hamburger">
               <img src="./assets/img/icons/hamburger-icon-24w.png" alt="">
@@ -133,7 +133,7 @@
         </div>
         <div class="footer__flex-child footer__contact-information">
           <h4>Phone</h4>
-          <p><a href="tel:+17145192456">(714) 519-2456</a></p>
+          <p><a href="tel:+13474848860">(347) 484-8860</a></p>
         </div>
       </div>
       <div class="footer__flex">
@@ -147,7 +147,7 @@
       </div>
       <hr class="footer__horizontal-line">
       <div class="footer__copyright">
-        <p>© 2023 Plumber In Fullerton. All rights reserved.</p>
+        <p>© 2023 All Plumbing NYC. All rights reserved.</p>
       </div>
     </div>
   </footer>
