--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
               <p class="contact__text">Have any questions? Reach out to us through this contact form and we will get back to you shortly.</p>
             </div>
             <div class="contact__column">
-              <form action="https://formsubmit.co/support@allplumbingnyc.com" method="POST">
+              <form action="https://formsubmit.co/allplumbingnycgroup@gmail.com" method="POST">
                 <div class="contact__form-field form-float">
                   <input type="text" id="name" name="name" required="required" aria-label="name">
                   <label for="name">Name *</label>
