--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img class="about__icon" src="./assets/img/icons/wrench-icon-48w.png" alt="">
             <h2 class="about__title">Who Are We?</h2>
             <p class="about__subheading">
-              We're a team of specialists who work with only the most qualified and experienced technicians in Chautauqua County to help you resolve your plumbing issues <span class="underline">effortlessly</span>.
+              We're a team of specialists who work with only the most qualified and experienced technicians in NYC boroughs to help you resolve your plumbing issues <span class="underline">effortlessly</span>.
             </p>
             <p>Our business is committed to delivering excellent quality service and value with every job. We pride ourselves handling the most complicated issues while adhering to the highest standards of customer satisfaction.</p>
             <div class="row">
